test/scc/expr/semantic-errors/108.a
108.t:9:9: error: incompatible type for argument 1 in function call